[package]
name = "serde-jsonlines"
version = "0.5.0-dev"
edition = "2021"
rust-version = "1.70"
description = "Read & write JSON Lines documents"
authors = ["John Thorvald Wodder II <serde-jsonlines@varonathe.org>"]
repository = "https://github.com/jwodder/serde-jsonlines"
license = "MIT"
keywords = ["json", "json-lines", "jsonlines", "serde", "serde-json"]
categories = ["asynchronous", "encoding", "parser-implementations"]
exclude = ["/.*"]

[dependencies]
futures = { version = "0.3.25", default-features = false, optional = true }
pin-project-lite = { version = "0.2.9", optional = true }
serde = "1.0.147"
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["io-util"], optional = true }
tokio-stream = { version = "0.1.11", optional = true }

[dev-dependencies]
assert_fs = "1.0.7"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["fs", "macros", "rt", "rt-multi-thread"] }

[features]
async = ["dep:futures", "dep:pin-project-lite", "dep:tokio", "dep:tokio-stream"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
